Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-17872

Error when compiling Qt3D with Qt 4.7.2

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt3D 1.0
    • 4.7.2
    • Qt3D
    • None
    • ae0af47c60628cde06c7a0a1c7903297e130d7fb

    Description

      Qt 4.7.2 has been released on March 1st.
      So I have tried to build Qt4.7.2 and Qt3D, but I met a build error when compiling Qt3D from git.

      /home/shkim/Qt/QtSrc/qt3d/src/quick3d/qdeclarativeeffect.cpp: In member function 'virtual void QDeclarativeEffect::setTexture(const QUrl&)':
      /home/shkim/Qt/QtSrc/qt3d/src/quick3d/qdeclarativeeffect.cpp:263: error: 'Options' is not a member of 'QDeclarativePixmap'
      /home/shkim/Qt/QtSrc/qt3d/src/quick3d/qdeclarativeeffect.cpp:263: error: expected ';' before 'options'
      /home/shkim/Qt/QtSrc/qt3d/src/quick3d/qdeclarativeeffect.cpp:265: error: 'options' was not declared in this scope
      /home/shkim/Qt/QtSrc/qt3d/src/quick3d/qdeclarativeeffect.cpp:265: error: 'Asynchronous' is not a member of 'QDeclarativePixmap'
      /home/shkim/Qt/QtSrc/qt3d/src/quick3d/qdeclarativeeffect.cpp:266: error: 'options' was not declared in this scope

      The code in qdeclarativeeffect.cpp from Qt3D is using QDeclarativePixmap::Options if Qt version is 4.7.2, but the Qt 4.7.2 release version does not have "Options" member.

      Attachments

        1. qt3d-4.7.2.diff
          1 kB
          Andrew Wason
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            rweather Rhys Weatherley (closed Nokia identity) (Inactive)
            sukkim sukhyun kim
            Votes:
            2 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes