Update QDeclarativePixmap version check to 4.7.3

Task-number: QTBUG-17872