src/imports/threed/shaderprogram.cpp
@@ -689,7 +689,7 @@ void ShaderProgramEffect::processTextureUrl(int uniformLocation, QString urlStri
         QDeclarativePixmap* declarativePixmap =
                 declarativePixmaps[uniformLocation];
         QDeclarativeEngine *engine = qmlEngine(parent.data());
-#if QT_VERSION >= 0x040702
+#if QT_VERSION >= 0x040703
         QDeclarativePixmap::Options options = QDeclarativePixmap::Cache;
         if (async)
             options |= QDeclarativePixmap::Asynchronous;
